--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <h1 class="app-name">Subscriptions Tracking App</h1>
-
+  <p id="message"></p>
   <!-- making landing page -->
   <section class="container">
     <div class="messages-div top-third">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="unauthenticated">
-      <p id="message">Hello</p>
+
       <!-- using modal -->
       <!-- sign up -->
       <div class="flex-container">
@@ -114,7 +114,7 @@
 
   <!-- authenticated -->
   <div class="authenticated">
-    <p id="sub-message">Hey</p>
+    <p id="sub-message"></p>
     <div class="navbar fixed-top navbar-light bg-light justify-content-end">
       <a class="navbar-brand" href="#">TRACKING APP</a>
       <!-- search box aka get one sub -->
@@ -156,22 +156,98 @@
       </div>
     </div>
 
-    <form id="create-new-sub">
+    <!-- making add new modal -->
+    <button id="modal-addNew" type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#addNewModal" data-whatever="">Add New</button>
+    <div class="modal fade" id="addNewModal" tabindex="-1" role="dialog" aria-labelledby="addNewModal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addNewModal">Add New</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="create-new-sub">
+              <div class="form-group">
+                <label for="add-new-url" class="col-form-label">Website Address:</label>
+                <input name="subscription[url]" type="text" class="form-control" id="add-new-url">
+              </div>
+              <div class="form-group">
+                <label for="add-new-start" class="col-form-label">Start Date:</label>
+                <input name="subscription[start]" type="text" class="form-control" id="add-new-start" onfocus="(this.type='date')" onblur="(this.type='text')" required>>
+              </div>
+              <div class="form-group">
+                <label for="add-new-end" class="col-form-label">End Date:</label>
+                <input name="subscription[end]" type="text" class="form-control" id="add-new-end" onfocus="(this.type='date')" onblur="(this.type='text')" required>>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <form id="create-new-sub">
       <input class="sub-input" type="text" name="subscription[url]" placeholder="Website Address" required>
       <input class="sub-input" type="text" name=subscription[start] placeholder="Start Date" onfocus="(this.type='date')" onblur="(this.type='text')" required>
       <input class="sub-input" type="text" name=subscription[end] placeholder="End Date" onfocus="(this.type='date')" onblur="(this.type='text')" required>
       <input class="sub-input" type="text" name=subscription[owner] placeholder="Owner">
       <button type="submit">Add New</button>
-    </form>
+    </form> -->
 
-    <form id="update-sub">
+    <!-- making update modal -->
+
+    <button id="modal-editSub" type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#editSubModal" data-whatever="">Edit</button>
+    <div class="modal fade" id="editSubModal" tabindex="-1" role="dialog" aria-labelledby="editSubModal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editSubModal">Edit</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form id="update-sub">
+              <div class="form-group">
+                <label for="edit-sub-id" class="col-form-label">Subscription ID:</label>
+                <input name="subscription[id]" type="text" class="form-control" id="edit-sub-id">
+              </div>
+              <div class="form-group">
+                <label for="edit-sub-url" class="col-form-label">Website Address:</label>
+                <input name="subscription[url]" type="text" class="form-control" id="edit-sub-url">
+              </div>
+              <div class="form-group">
+                <label for="edit-sub-start" class="col-form-label">Start Date:</label>
+                <input name="subscription[start]" type="text" class="form-control" id="edit-sub-start" onfocus="(this.type='date')" onblur="(this.type='text')" required>>
+              </div>
+              <div class="form-group">
+                <label for="edit-sub-end" class="col-form-label">End Date:</label>
+                <input name="subscription[end]" type="text" class="form-control" id="edit-sub-end" onfocus="(this.type='date')" onblur="(this.type='text')" required>>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <form id="update-sub">
       <input class="sub-input" type="text" name=subscription[id] placeholder="Subscription's ID" required>
       <input class="sub-input" type="text" name=subscription[url] placeholder="Website Address" required>
       <input class="sub-input" type="text" name=subscription[start] placeholder="Start Date" onfocus="(this.type='date')" onblur="(this.type='text')" required>
       <input class="sub-input" type="text" name=subscription[end] placeholder="End Date" onfocus="(this.type='date')" onblur="(this.type='text')" required>
       <button type="submit">Update</button>
-    </form>
-    <button id="show-subs" type="submit">SHOW TOTAL SUBS</button>
+    </form> -->
+
+    <button id="show-subs" class="btn btn-outline-success my-2 my-sm-0" type="submit">SHOW TOTAL SUBS</button>
 
 
 
